--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "sequelize": "^6.25.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14"
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-session": "^2.0.44",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/pg": "^8.6.5",
+    "@types/sequelize": "^4.28.14"
   }
 }
